Fixing horizontal scrolling issue on mobile devices

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -255,9 +255,10 @@ header>p::before{
 
 // Twitter
 #tweet {
-    width: 550px !important;
+    max-width: 550px !important;
     margin: 0 auto;
     text-align: center;
+    overflow-y: scroll;
 }
 
 #tweet iframe {
